--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,3 +1,11 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+$font-family: 'Poppins', sans-serif;
+$body-regular: 400;
+$body-medium: 500;
+$body-semibold: 600;
+$body-bold: 700;
+
 /* Breakpoints */
 $sm: 576px;
 $md: 768px;
@@ -9,5 +17,6 @@ $xxl: 1400;
 $color-black: #131313;
 $color-grey: #adadad;
 $color-white: #fcfcfc;
-$color-red: red;
-$color-yellow: yellow;
+$color-clear: transparent;
+$color-red: #f8332d;
+$color-yellow: #e8d028;
